examples/type_system/failing/185_runtime_boundary_arg_e1004.flx
import TypeSystem.BoundaryUnknown

fn typed_add(a: Int, b: Int) -> Int {
    a + b
}

let dynamic = TypeSystem.BoundaryUnknown.dynamic_string()
typed_add(dynamic, 1)
